Changed put response to 204
